# thu-calendar-sync

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  pyproject.toml  thu-cal.toml.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/thu_calendar_sync/: __init__.py  __main__.py  auth.py  cli.py  config.py  exceptions.py  fetcher.py  ics_writer.py  models.py  outlook.py
tests/: conftest.py  test_auth.py  test_config.py  test_fetcher.py  test_ics_writer.py  test_models.py  test_outlook.py
