[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thu-calendar-sync"
version = "0.1.0"
description = "Sync Tsinghua course schedule to calendar (ICS / Outlook)"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.25.0",
    "rich>=15.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "gmssl>=3.2.0",
    "icalendar>=5.0.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
thu-cal = "thu_calendar_sync.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/thu_calendar_sync"]
